# satisfactory-tools

./: .env  .gitignore  LICENSE  README.md  design.md  example.txt  pyproject.toml  requirements.txt  satisfactory.db  streamlit_app.py  test.py
.github/workflows/: ci.yml
.github/workflows-staged/: ci.yml
data/: Docs.json
pages/: 1_Recipe_Browser.py  2_Item_Explorer.py  3_Production_Calculator.py
src/: __init__.py  cache.py  calculator.py  dashboard.py  database.py  etl.py  formatters.py  game_constants.py  production.py  queries.py  schemas.py  types.py
tests/: conftest.py  test_calculator.py  test_game_constants.py  test_production.py
