[project]
name = "satisfactory-tools"
version = "0.1.0"
description = "Factory planning tools for the game Satisfactory."
requires-python = ">=3.11"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # line-length enforced by formatter, not linter

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]
"pages/*" = ["E402"]  # load_dotenv before src imports is intentional

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true   # streamlit and sqlalchemy.orm don't ship type stubs
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
